[tool.poetry]
name = "pixelart-dataset-exploration"
version = "0.1.0"
description = ""
authors = ["hsadler <harrysadlermusic@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.3.2"
jupyterlab = "^4.3.4"
numpy = "^2.2.1"
ipykernel = "^6.29.5"
datasets = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"